tests/samples/negative/types/const_initializer_binary_expr.ax
module const_initializer_binary_expr;

fn runtime() -> i32 {
  return 1;
}

const VALUE: i32 = runtime() + 1;

fn main() -> i32 {
  return VALUE;
}
